fix: Do not extend height of the content because of the sidebar taking too much space

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@
 .sidebars {
   position: sticky;
   top: 0;
-  height: 100vh;
+  height: 100%;
 }
 
 .prison-model {
