--- a/src/components/SidebarRight.scss
+++ b/src/components/SidebarRight.scss
@@ -5,6 +5,6 @@
   right: 0;
   top: 0;
   width: 240px;
-  height: 100%;
+  height: 100vh;
   background-color: $sidebar-color;
 }
